shade function created without shadow function, reflect_vector fn added to vector library

--- a/libraries/dm_vectors/Makefile
+++ b/libraries/dm_vectors/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: dmalesev <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: ctrouve <ctrouve@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/03 09:10:41 by dmalesev          #+#    #+#              #
-#    Updated: 2022/08/24 15:09:32 by dmalesev         ###   ########.fr        #
+#    Updated: 2022/11/03 14:46:27 by ctrouve          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -47,7 +47,8 @@ SOURCES_LIST =	add_vectors.c\
 				cross_product.c\
 				normalize_vector.c\
 				divide_vector.c\
-				vector_magnitude.c
+				vector_magnitude.c\
+				reflect_vector.c
 SOURCES = $(addprefix $(SOURCES_DIRECTORY), $(SOURCES_LIST))
 SOURCE_COUNT = $(words $(SOURCES_LIST))
 
