Almost done with norm on bdpt.

--- a/libraries/dm_vectors/Makefile
+++ b/libraries/dm_vectors/Makefile
@@ -6,7 +6,7 @@
 #    By: ctrouve <ctrouve@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/03 09:10:41 by dmalesev          #+#    #+#              #
-#    Updated: 2022/12/19 15:16:01 by ctrouve          ###   ########.fr        #
+#    Updated: 2022/12/19 18:25:33 by dmalesev         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,7 @@ SOURCES_LIST =	add_vectors.c\
 				vector_magnitude.c\
 				reflect_vector.c\
 				angle_between_vectors.c\
+				multiply_vectors.c\
 				random_vector.c
 SOURCES = $(addprefix $(SOURCES_DIRECTORY), $(SOURCES_LIST))
 SOURCE_COUNT = $(words $(SOURCES_LIST))
